--- a/mods/Kconfig
+++ b/mods/Kconfig
@@ -70,4 +70,24 @@ menu "Filesystems"
 source "fs/exfat/Kconfig"
 source "fs/f2fs/Kconfig"
 endmenu
+
+menu "Touchscreen Mods"
+
+config TOUCHSCREEN_SWEEP2WAKE
+        tristate "Sweep2Wake for touchscreens"
+        select TOUCHSCREEN_PREVENT_SLEEP
+        default n
+
+config TOUCHSCREEN_DOUBLETAP2WAKE
+        tristate "DoubleTap2Wake for touchscreens"
+        select TOUCHSCREEN_PREVENT_SLEEP
+        default n
+
+config TOUCHSCREEN_PREVENT_SLEEP
+        bool "Inihibit sleep on modified touchscreen drivers"
+        default n
+        help
+          This disables the sleep function of modified touchscreen drivers.
+endmenu    
+
 endif # RBHEROMAX
