--- a/mods/Kconfig
+++ b/mods/Kconfig
@@ -52,7 +52,55 @@ config CPU_FREQ_GOV_EXTRA
         depends on CPU_FREQ
         help
           Enable smartassv2, asswax, and badass cpu governors
+if CPU_FREQ_GOV_EXTRA
+menu "Badass CPU GOV options"
+config CPU_FREQ_GOV_BADASS_2_PHASE
+  tristate "'2-phase' power-efficiency badass algorithm"
+  depends on CPU_FREQ_GOV_EXTRA
+  help
+    '2-phase' - This driver adds a new algo to save power
 
+config CPU_FREQ_GOV_BADASS_2_PHASE_FREQ
+  int "'2-phase' badass frequency"
+  default 918000
+  depends on CPU_FREQ_GOV_EXTRA
+  depends on CPU_FREQ_GOV_BADASS_2_PHASE
+
+config CPU_FREQ_GOV_BADASS_3_PHASE
+  tristate "'3-phase' power-efficiency badass algorithm"
+  depends on CPU_FREQ_GOV_EXTRA
+  depends on CPU_FREQ_GOV_BADASS_2_PHASE
+  help
+    '3-phase' - This driver adds a new algo to save power
+
+config CPU_FREQ_GOV_BADASS_3_PHASE_FREQ
+  int "'3-phase' badass frequency"
+  default 1188000
+  depends on CPU_FREQ_GOV_EXTRA
+  depends on CPU_FREQ_GOV_BADASS_2_PHASE
+  depends on CPU_FREQ_GOV_BADASS_3_PHASE
+
+config CPU_FREQ_GOV_BADASS_GPU_CONTROL
+  tristate "'gpu_control' power-efficiency badass algorithm"
+  depends on CPU_FREQ_GOV_EXTRA
+  depends on CPU_FREQ_GOV_BADASS_2_PHASE
+  help
+    'gpu_control' - This driver adds a new algo to save power
+
+config CPU_FREQ_GOV_BADASS_LOWBAT_POWERSAVE
+  tristate "'lowbat_powersave' power-efficiency badass algorithm"
+  depends on CPU_FREQ_GOV_EXTRA
+  help
+    'lowbat_powersave' - This driver adds a new algo to save power
+
+config CPU_FREQ_GOV_BADASS_ALLOW_BYPASS
+  tristate "Allows bypassing phases"
+  depends on CPU_FREQ_GOV_EXTRA
+  depends on CPU_FREQ_GOV_BADASS_2_PHASE
+ help
+    'allow_bypass' - This driver adds a bypass to the phases
+endmenu
+endif
 config MSM8930_GPU_OC
 	bool "Overclock GPU"
 	default n
